[package]
name = "ziggy_seeing"
version = "0.1.0"
edition = "2021"
authors = ["Aleksander Ross Møller <aleksander.r.m@protonmail.com>"]
description = "A CLI tool for getting sightseeing recommendations based on user lcoation"
readme = "README.md"
repository = "https://github.com/DisasterlyDisco/ziggy_seeing"
license = "GPU 3.0"
license-file = "LICENSE"

[dependencies]
