[package]
name = "ziggy_seeing"
version = "0.1.0"
edition = "2021"
authors = ["Aleksander Ross Møller <aleksander.r.m@protonmail.com>"]
description = "A CLI tool for getting sightseeing recommendations based on user location"
readme = "README.md"
repository = "https://github.com/DisasterlyDisco/ziggy_seeing"
license = "GPU 3.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
envy = "0.4.2"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
